# sylar

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  ai_appserver_dev_log.md  http_aiserver_dev_log.md  sylar_dev_log.md  sylar_optimization.md
benchmarks/http/: http_bench_server.cc  mixed.lua  post.lua  post_status.lua  run.sh  run_full_bench.sh  run_matrix_bench.sh  status_count.lua  summarize_bench.py
benchmarks/http_ab_focus_post_lb_20260325_154302/: README.txt  comparison_median.csv  comparison_median.md  local_http_r1_echo_raw_c1024.wrk.out  local_http_r1_echo_raw_c2048.wrk.out  local_http_r1_ping_c1024.wrk.out  local_http_r1_ping_c2048.wrk.out  local_http_r2_echo_raw_c1024.wrk.out  local_http_r2_echo_raw_c2048.wrk.out  local_http_r2_ping_c1024.wrk.out  local_http_r2_ping_c2048.wrk.out  local_http_r3_echo_raw_c1024.wrk.out  local_http_r3_echo_raw_c2048.wrk.out  local_http_r3_ping_c1024.wrk.out  local_http_r3_ping_c2048.wrk.out  local_https_r1_echo_raw_c1024.wrk.out  local_https_r1_echo_raw_c2048.wrk.out  local_https_r1_ping_c1024.wrk.out  local_https_r1_ping_c2048.wrk.out  local_https_r2_echo_raw_c1024.wrk.out  local_https_r2_echo_raw_c2048.wrk.out  local_https_r2_ping_c1024.wrk.out  local_https_r2_ping_c2048.wrk.out  local_https_r3_echo_raw_c1024.wrk.out  local_https_r3_echo_raw_c2048.wrk.out  local_https_r3_ping_c1024.wrk.out  local_https_r3_ping_c2048.wrk.out  summary_clean.csv  summary_median.csv  upstream_ref_http_r1_echo_raw_c1024.wrk.out  upstream_ref_http_r1_echo_raw_c2048.wrk.out  upstream_ref_http_r1_ping_c1024.wrk.out  upstream_ref_http_r1_ping_c2048.wrk.out  upstream_ref_http_r2_echo_raw_c1024.wrk.out  upstream_ref_http_r2_echo_raw_c2048.wrk.out  upstream_ref_http_r2_ping_c1024.wrk.out  upstream_ref_http_r2_ping_c2048.wrk.out  upstream_ref_http_r3_echo_raw_c1024.wrk.out  upstream_ref_http_r3_echo_raw_c2048.wrk.out  upstream_ref_http_r3_ping_c1024.wrk.out  (+13 more)
benchmarks/http_ab_suite_focus_20260325_003420/: README.txt  comparison_median.csv  comparison_median.md  local_http_r1_echo_raw_c1024.wrk.out  local_http_r1_echo_raw_c2048.wrk.out  local_http_r1_ping_c1024.wrk.out  local_http_r1_ping_c2048.wrk.out  local_http_r2_echo_raw_c1024.wrk.out  local_http_r2_echo_raw_c2048.wrk.out  local_http_r2_ping_c1024.wrk.out  local_http_r2_ping_c2048.wrk.out  local_http_r3_echo_raw_c1024.wrk.out  local_http_r3_echo_raw_c2048.wrk.out  local_http_r3_ping_c1024.wrk.out  local_http_r3_ping_c2048.wrk.out  local_http_r4_echo_raw_c1024.wrk.out  local_http_r4_echo_raw_c2048.wrk.out  local_http_r4_ping_c1024.wrk.out  local_http_r4_ping_c2048.wrk.out  local_https_r1_echo_raw_c1024.wrk.out  local_https_r1_echo_raw_c2048.wrk.out  local_https_r1_ping_c1024.wrk.out  local_https_r1_ping_c2048.wrk.out  local_https_r2_echo_raw_c1024.wrk.out  local_https_r2_echo_raw_c2048.wrk.out  local_https_r2_ping_c1024.wrk.out  local_https_r2_ping_c2048.wrk.out  local_https_r3_echo_raw_c1024.wrk.out  local_https_r3_echo_raw_c2048.wrk.out  local_https_r3_ping_c1024.wrk.out  local_https_r3_ping_c2048.wrk.out  local_https_r4_echo_raw_c1024.wrk.out  local_https_r4_echo_raw_c2048.wrk.out  local_https_r4_ping_c1024.wrk.out  local_https_r4_ping_c2048.wrk.out  summary.csv  summary_clean.csv  summary_median.csv  upstream_ref_http_r1_echo_raw_c1024.wrk.out  upstream_ref_http_r1_echo_raw_c2048.wrk.out  (+30 more)
benchmarks/http_suite_20260323_141050/: ab_ping_short_c256.ab.out  summary.csv  summary.md  wrk_echo_chunked_c256.wrk.out  wrk_echo_content_length_c256.wrk.out  wrk_ping_c1024.wrk.out  wrk_ping_c256.wrk.out  wrk_ping_c64.wrk.out  wrk_ping_io16_c256.wrk.out  wrk_ping_io1_c256.wrk.out  wrk_ping_io4_c256.wrk.out  wrk_ping_io8_c256.wrk.out  wrk_ping_session_on_c256.wrk.out
benchmarks/http_suite_20260323_141505/: summary.csv  summary.md  wrk_echo_chunked_c256.wrk.out  wrk_echo_content_length_c256.wrk.out  wrk_echo_short_c256.wrk.out  wrk_ping_c1024.wrk.out  wrk_ping_c256.wrk.out  wrk_ping_c64.wrk.out  wrk_ping_io16_c256.wrk.out  wrk_ping_io1_c256.wrk.out  wrk_ping_io4_c256.wrk.out  wrk_ping_io8_c256.wrk.out  wrk_ping_session_on_c256.wrk.out  wrk_ping_short_c256.wrk.out
benchmarks/http_suite_20260323_200209/: summary.csv  summary.md  wrk_echo_chunked_c256.wrk.out  wrk_echo_content_length_c256.wrk.out  wrk_echo_short_c256.wrk.out  wrk_ping_c1024.wrk.out  wrk_ping_c256.wrk.out  wrk_ping_c64.wrk.out  wrk_ping_io16_c256.wrk.out  wrk_ping_io1_c256.wrk.out  wrk_ping_io4_c256.wrk.out  wrk_ping_io8_c256.wrk.out  wrk_ping_session_on_c256.wrk.out  wrk_ping_short_c256.wrk.out
benchmarks/http_suite_20260323_200437/: summary.csv  summary.md  wrk_echo_chunked_c256.wrk.out  wrk_echo_content_length_c256.wrk.out  wrk_echo_short_c256.wrk.out  wrk_ping_c1024.wrk.out  wrk_ping_c256.wrk.out  wrk_ping_c64.wrk.out  wrk_ping_io16_c256.wrk.out  wrk_ping_io1_c256.wrk.out  (+4 more)
docs/: ab_benchmark_summary_2026-03-20.md  ai_appserver_dev_log.md  allocator_benchmark_guide_2026-03-20.md  context_switch_benchmark_guide_2026-03-21.md  fiber_curl_session.md  resume_sylar_benchmark_report.md  sylar_core_sync_bundle.md  sylar_dev_log.md  sylar_optimization.md
interview/: project_interview_guide.md  project_resume_writeup.md
src/ai/: main.cc
tests/: ab_echo_body.txt  http_bench_server.cc  run_allocator_bench.sh  run_context_switch_bench.sh  run_http_ab_suite.sh  run_http_bench_suite.sh  test_address.cc  test_ai_chat_service.cc  test_benchmark_fiber.cc  test_benchmark_tcp_allocator.cc  test_bytearray.cc  test_bytearray_pool_perf.cc  test_config.cc  test_context_switch_pingpong.cc  test_cors_middleware.cc  test_endian.cc  test_fd_manager.cc  test_fiber.cc  test_fiber_pool.cc  test_hook.cc  test_hook_timeout_mt.cc  test_http_context.cc  test_http_dispatch.cc  test_http_framework_config.cc  test_http_parser.cc  test_http_router.cc  test_http_server.cc  test_http_ssl_server.cc  test_iomanager.cc  test_log.cc  test_memory_pool.cc  test_memorypool.cc  test_rag_indexer.cc  test_scheduler.cc  test_server_mode_bench.cc  test_session_manager.cc  test_shared_stack_guard.cc  test_shared_stack_helpers.cc  test_shared_stack_lifecycle.cc  test_shared_stack_longrun.cc  (+16 more)
(+402 files in other folders)
